[#1] add: stream API 수정